Updated title and added todos.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -40,7 +40,7 @@
 
 %\DeclareMathOperator{\PSPACE}{PSPACE} % PSpace classes
 
-\title{Symbolic Side-Channel Analysis for Probabilistic X (language) programs}
+\title{Symbolic Side-attack scalability in Klee and Symboic path finder}
 \author{Emilie Lykke Thonsgaard \and Irfansha Shaik}
 %\date{}
 
@@ -50,8 +50,12 @@
 \section{Planning}
 \label{sec:planning}
 
+Todos for IS:
 \begin{enumerate}
-\item XXX
+\item Write Psuedo code for single step attack
+\item Run single step attack in Klee
+\item Run single step attack in Symbolic Path Finder
+\item Adapt it to multi-step attack
 \end{enumerate}
 
 \chapter{Introduction}
