For now sticking to only klee.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -40,7 +40,7 @@
 
 %\DeclareMathOperator{\PSPACE}{PSPACE} % PSpace classes
 
-\title{Symbolic Side-attack scalability in Klee and Symboic path finder}
+\title{Symbolic Side-attack scalability in Klee}
 \author{Emilie Lykke Thonsgaard \and Irfansha Shaik}
 %\date{}
 
