--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -1,85 +1,91 @@
-%Irfansha Shaik, 27.04.2020, Aarhus.
-
-\documentclass[11pt]{report}
-
+%\documentclass{report}
+\documentclass[11pt,a4paper,notitlepage]{article}
 \usepackage[utf8]{inputenc}
-\usepackage{geometry}
-\geometry{a4paper}
+\usepackage{titling}
+\title{Symbolic execution of adaptive side-channel attacks}
+\author{Emilie L. Thonsgaard \and Irfansha Shaik}
+\date{May 2020}
 
-\setcounter{secnumdepth}{4}
-
+\usepackage{natbib}
 \usepackage{graphicx}
 
-%%% PACKAGES
-\usepackage{booktabs}
-\usepackage{array}
-\usepackage{paralist}
-\usepackage{verbatim}
-\usepackage{subfig}
-\usepackage{hyperref}
-\usepackage{natbib}
-\usepackage{amsmath}
-\usepackage{textcomp}
-
-%%% HEADERS & FOOTERS
-\usepackage{fancyhdr}
-\pagestyle{fancy}
-\renewcommand{\headrulewidth}{0pt}
-\lhead{}\chead{}\rhead{}
-\lfoot{}\cfoot{\thepage}\rfoot{}
-
-%%% SECTION TITLE APPEARANCE
-\usepackage{sectsty}
-\allsectionsfont{\sffamily\mdseries\upshape}
-
-%%% ToC (table of contents) APPEARANCE
-\usepackage[nottoc,notlof,notlot]{tocbibind} % Put the bibliography in the ToC
-\usepackage[titles,subfigure]{tocloft}
-\renewcommand{\cftsecfont}{\rmfamily\mdseries\upshape}
-\renewcommand{\cftsecpagefont}{\rmfamily\mdseries\upshape} % No bold!
-
-%\DeclareMathOperator{\PSPACE}{PSPACE} % PSpace classes
-
-\title{Symbolic Side-attack scalability in Klee}
-\author{Emilie Lykke Thonsgaard \and Irfansha Shaik}
-%\date{}
-
 \begin{document}
-\maketitle
+\begin{titlingpage}
+    \maketitle
+    \begin{abstract}
+        In this report we review the subject of side-channel attacks and how symbolic execution is used in this context[...]
+    \end{abstract}
+\end{titlingpage}
 
-\section{Planning}
-\label{sec:planning}
+\tableofcontents
+\newpage
+%\setcounter{chapter}{-1}
 
-Todos for IS:
-\begin{enumerate}
-\item Test the if a secret value is reachable and take advantage of heuristics.
-  \begin{enumerate}
-  \item use option "-exit-on-error" to stop when a solution is found.
-  \end{enumerate}
-\item try to initialise a new symbolic variable when needed (not at once in starting).
-\end{enumerate}
+%\section{Planning}
+%\label{cha:planning}
 
-\chapter{Introduction}
+%\newpage
+
+%\section{Todos for IS}
+%\label{sec:todosforis}
+
+%\begin{enumerate}
+%    \item Work on examples and understand how to use it for side channel attacks.
+%\end{enumerate}
+
+%\newpage
+
+\section{Introduction}
 \label{cha:introduction}
 
-XXX
+[...]
 
-Summary of Symbolic analysis of probabilistic programs paper:
+\newpage
+
+\section{Softwares}
+\label{cha:softwares}
+
 \begin{enumerate}
-\item The main challenge here is to tackle the side channel attacks.
-\item Symbolic variables are added to probabilistic outcome and leaking is measured by quantification.
-\item Tools to use, Symbolic PathFinder and used them on Java program
-\item The key idea is to quantify the information leakage in standard functions such as Random functions.
-\item While injected randomness can be used as a counter measure, it is essential to measure the effectiveness the measures.
+    \item \texttt{S2E}
+    \item \texttt{VINE}
 \end{enumerate}
 
-\section{Side channel attacks}
+Docker usage:
+\begin{enumerate}
+    \item \texttt{sudo docker run --rm -ti --ulimit='stack=-1:-1' klee/klee}
+\end{enumerate}
+
+Working usage:
+\begin{enumerate}
+    \item \texttt{http://klee.github.io/releases/docs/v1.3.0/docker/}
+\end{enumerate}
+
+\newpage
+
+\section{Literature review}
+\label{cha:literaturereview}
+
+%\begin{enumerate}
+%\item The main challenge here is to tackle the side channel attacks.
+%\item Symbolic variables are added to probabilistic outcome and leaking is measured by quantification.
+%\item Tools to use, Symbolic PathFinder and used them on Java program
+%\item The key idea is to quantify the information leakage in standard functions such as Random functions.
+%\item While injected randomness can be used as a counter measure, it is essential to measure the effectiveness the measures.
+%\end{enumerate}
+
+\subsection{Side channel attacks}
 \label{sec:sidechannelattacks}
+
+XXX 
+
+\subsection{Symbolic execution}
+\label{sec:symbolicexecution}
 
 XXX
 
-\chapter{Experimentation and design}
-\label{cha:experimentationanddesign}
+\newpage
+
+\section{Experimentation and Design}
 
 We consider a simple side channel attack via symbolic execution.
 Consider the code snippet provided below:
@@ -109,7 +115,9 @@ klee -emit-all-errors symbolic_attack.bc 1 6 2
 ktest-tool test000018.ktest
 \end{verbatim}
 
+\newpage
+
+
 \bibliographystyle{plain}
 \bibliography{references}
-
 \end{document}
