Removing commented out points (not relavent anymore).

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -65,13 +65,7 @@ Working usage:
 \section{Literature review}
 \label{cha:literaturereview}
 
-%\begin{enumerate}
-%\item The main challenge here is to tackle the side channel attacks.
-%\item Symbolic variables are added to probabilistic outcome and leaking is measured by quantification.
-%\item Tools to use, Symbolic PathFinder and used them on Java program
-%\item The key idea is to quantify the information leakage in standard functions such as Random functions.
-%\item While injected randomness can be used as a counter measure, it is essential to measure the effectiveness the measures.
-%\end{enumerate}
+XXX
 
 \subsection{Side channel attacks}
 \label{sec:sidechannelattacks}
