Updated todos for the project. - todos will be removed before submission.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -19,21 +19,19 @@
 
 \tableofcontents
 \newpage
-%\setcounter{chapter}{-1}
+\setcounter{section}{-1}
 
-%\section{Planning}
-%\label{cha:planning}
 
-%\newpage
+\section{Todos for IS}
+\label{sec:todosforis}
 
-%\section{Todos for IS}
-%\label{sec:todosforis}
+\begin{enumerate}
+  \item Add first set of data to the repository.
+  \item Analyse the data for any differences based on heuristics.
+  \item Run the script for larger domain size and $k$-step attack.
+\end{enumerate}
 
-%\begin{enumerate}
-%    \item Work on examples and understand how to use it for side channel attacks.
-%\end{enumerate}
-
-%\newpage
+\newpage
 
 \section{Introduction}
 \label{cha:introduction}
