Now only considering klee software.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -40,13 +40,8 @@
 
 \newpage
 
-\section{Softwares}
+\section{Software: \texttt{Klee}}
 \label{cha:softwares}
-
-\begin{enumerate}
-    \item \texttt{S2E}
-    \item \texttt{VINE}
-\end{enumerate}
 
 Docker usage:
 \begin{enumerate}
