Added new section for research questions.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -72,6 +72,13 @@ XXX
 
 \newpage
 
+\section{Research questions}
+\label{sec:researchquestions}
+
+XXX
+
+\newpage
+
 \section{Experimentation and Design}
 
 We consider a simple side channel attack via symbolic execution.
