Label added for experimentation section.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -80,6 +80,7 @@ XXX
 \newpage
 
 \section{Experimentation and Design}
+\label{sec:experimentationanddesign}
 
 We consider a simple side channel attack via symbolic execution.
 Consider the code snippet provided below:
