Updated todos - heuristics are doing something different, need to analyse.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -30,6 +30,10 @@
 \begin{enumerate}
   \item Add first set of data to the repository.
   \item Analyse the data for any differences based on heuristics.
+  \begin{enumerate}
+    \item There seems to be difference between heuristics (atleast in data).
+    \item Now running all avaliable heristics for small $k$.
+  \end{enumerate}
   \item Run the script for larger domain size and $k$-step attack.
 \end{enumerate}
 
