--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -28,8 +28,7 @@
 \label{sec:todosforis}
 
 \begin{enumerate}
-  \item Add first set of data to the repository.
-  \item Analyse the data for any differences based on heuristics.
+  \item There does not seem to be major differences in the data produced by heuristics. To be updated in the document.
   \begin{enumerate}
     \item There seems to be difference between heuristics (atleast in data).
     \item Now running all avaliable heristics for small $k$.
