Added link to source code.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -85,7 +85,7 @@ To invesigate the scalability of adaptive side channel attacks in \texttt{Klee},
 \label{subsec:modellingsscattack}
 
 We consider a simple side channel attack via symbolic execution.
-Consider the code snippet provided below:
+Consider the code snippet provided below (source code available in \href{https://github.com/irfansha/LBS_projects.git}{github}):
 \begin{verbatim}
 int vulnerable_code(int public_input) {
 
