Updated todos, now considering experimentation on different solvers.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -31,9 +31,10 @@
   \item There does not seem to be major differences in the data produced by heuristics. To be updated in the document.
   \begin{enumerate}
     \item There seems to be difference between heuristics (atleast in data).
-    \item Now running all avaliable heristics for small $k$.
+    \item Rerunning for small $k$, now the klee does not output all test files (so better).
   \end{enumerate}
   \item Run the script for larger domain size and $k$-step attack.
+  \item Run script for different solvers (many option available).
 \end{enumerate}
 
 \newpage
