Update research questions - now also considering solver chain and its impact.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -75,6 +75,9 @@ The SPF implementation of this problem timeout for larger domains and k (XXX add
 In this project, we want to investigate if \texttt{Klee} employ any specific techniques for scalability.
 There are several heuristics for exploring the search space and solver chains that can be used.
 
+Investigating solvers chains is essential for symbolic execution, as the most of the time spent is in solver execution.
+In this project, for the adaptive side channel attack we investigate the impact of various solvers provided in \texttt{Klee}.
+
 \newpage
 
 \section{Experimentation setup and Analysis}
