Adding list of solvers available.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -180,6 +180,15 @@ A key point to remember with the different heuristics is that, they only dictate
 That implies, a full scale exploration of search trees will not be effected much by the heuristics.
 In our experimentation we cut of the trees with certain $k$ so heuristics might play a role here (or not).
 
+Here are the solvers we consider:
+\begin{enumerate}
+\item STP (XXX provide reference to original paper)
+\item Z3 (XXX provide reference)
+\item Counter example  caching solver
+\item Independence solver
+\end{enumerate}
+
+XXX Add few points on each solver.
 
 \subsection{Data and analysis}
 \label{subsec:dataandanalysis}
