Updated todos - Data generated, to be post processed.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -33,7 +33,8 @@
     \item There seems to be difference between heuristics (atleast in data).
     \item Data generated for small domains, upload data files.
   \end{enumerate}
-  \item Running script for different solvers (on $4$ choices).
+  \item Data generated for solvers, upload files.
+  \item Generate data files specific for timing and then plots.
   \item Run the script for larger domain size and $k$-step attack.
 \end{enumerate}
 
