Updated todos - data upload, now plots remaining - running script for larger problems.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -28,14 +28,9 @@
 \label{sec:todosforis}
 
 \begin{enumerate}
-  \item There does not seem to be major differences in the data produced by heuristics. To be updated in the document.
-  \begin{enumerate}
-    \item There seems to be difference between heuristics (atleast in data).
-    \item Data generated for small domains, upload data files.
-  \end{enumerate}
-  \item Data generated for solvers, upload files.
-  \item Generate data files specific for timing and then plots.
-  \item Run the script for larger domain size and $k$-step attack.
+  \item Data (and files) uploaded, plots to be added.
+  \item Running the script for larger domain size and $k$-step attack.
+  \item Added system details (specifications) as part of experimentation section.
 \end{enumerate}
 
 \newpage
