--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -29,6 +29,9 @@
 
 \begin{enumerate}
   \item Data (and files) uploaded, plots to be added.
+  \begin{enumerate}
+    \item Perhaps we use plotly for 3D plots.
+  \end{enumerate}
   \item Running the script for larger domain size and $k$-step attack.
   \item Added system details (specifications) as part of experimentation section.
 \end{enumerate}
