Plots added, table to be added.

--- a/final_project/report.tex
+++ b/final_project/report.tex
@@ -28,10 +28,8 @@
 \label{sec:todosforis}
 
 \begin{enumerate}
-  \item Data (and files) uploaded, plots to be added.
-  \begin{enumerate}
-    \item Perhaps we use plotly for 3D plots.
-  \end{enumerate}
+  \item Plots added, to be rearranged appropriately.
+  \item Add table for solver data.
   \item Running the script for larger domain size and $k$-step attack.
   \item Added system details (specifications) as part of experimentation section.
 \end{enumerate}
@@ -191,6 +189,46 @@ XXX Add few points on each solver.
 
 \subsection{Data and analysis}
 \label{subsec:dataandanalysis}
+
+List of figures:
+\begin{enumerate}
+\item XXX
+\item XXX
+\item XXX
+\item XXX
+\end{enumerate}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=10cm]{k_8_tt_basic_heur.png}
+\label{fig:basic_heur_tt}
+\caption{Total time with basic heuristics}
+\centering
+\end{figure}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=10cm]{k_8_st_basic_heur.png}
+\label{fig:basic_heur_st}
+\caption{Solver time with basic heuristics}
+\centering
+\end{figure}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=10cm]{k_8_tt_nonuni_heur.png}
+\label{fig:nonuni_heur_tt}
+\caption{Total time with Non-uniform random heuristics}
+\centering
+\end{figure}
+
+\begin{figure}[h]
+\centering
+\includegraphics[width=10cm]{k_8_st_nonuni_heur.png}
+\label{fig:nonuni_heur_st}
+\caption{Solver time with Non-uniform random heuristics}
+\centering
+\end{figure}
 
 XXX
 
